# leadForge_AI

backend/: .env  .env.example  Dockerfile  docker-compose.yml  leadforge.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03b74c95c3fa_add_crm_models.py  dd7ca53c2775_initial_user_model.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: auth.py  business.py  contact.py  note.py  tag.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  mixins.py  session.py
backend/app/models/: __init__.py  business.py  contact.py  note.py  user.py
backend/app/repositories/: __init__.py  base.py  crm.py  user.py
backend/app/schemas/: __init__.py  crm.py  user.py
backend/leadforge_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
desktop_app/: pubspec.yaml
desktop_app/lib/: main.dart
desktop_app/lib/core/database/: app_database.dart  app_database.g.dart
desktop_app/lib/core/database/tables/: businesses.dart  contacts.dart  notes.dart  tags.dart
desktop_app/lib/core/routing/: app_router.dart
desktop_app/lib/core/theme/: app_theme.dart
desktop_app/lib/features/auth/presentation/screens/: agency_registration_screen.dart
desktop_app/lib/features/campaigns/: campaigns_screen.dart
desktop_app/lib/features/leads/: lead_generation_screen.dart
desktop_app/linux/: CMakeLists.txt
desktop_app/linux/runner/: my_application.cc
desktop_app/macos/Runner.xcodeproj/: project.pbxproj
desktop_app/macos/Runner/Configs/: AppInfo.xcconfig
desktop_app/windows/runner/: Runner.rc
(+7 files in other folders)
