[project]
name = "leadforge-ai"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    # FastAPI Core
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",

    # Authentication
    "python-jose[cryptography]>=3.3",
    "pwdlib[argon2]>=0.2",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "passlib>=1.7.4", # Fallback for pwdlib issues just in case, but we prefer pwdlib

    # Redis
    "redis[hiredis]>=5.2",

    # Background Jobs
    "celery[redis]>=5.4",
    "flower>=2.0",

    # HTTP Client (for Ollama, audits)
    "httpx>=0.27",

    # Web Auditing
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyOpenSSL>=24.0",
    "playwright>=1.48",

    # Document Generation
    "weasyprint>=62",
    "docxtpl>=0.18",
    "python-docx>=1.1",
    "Jinja2>=3.1",

    # Utilities
    "python-multipart>=0.0.9",
    "emails>=0.6",
    "slowapi>=0.1.9",           # Rate limiting
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",              # For TestClient
    "factory-boy>=3.3",
    "ruff>=0.7",
    "pre-commit>=4.0",
]
